# qtday2021-tdd

./: CMakeLists.txt  README.md  main.cpp
src/: gate.cpp  gate.h  main.cpp  protocol.cpp  protocol.h
tests/test_gate/: CMakeLists.txt  tst_testgate.cpp
tests/utils/: protocol.cpp  protocol.h
